<resources>
    <string name="app_name">RunTime</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="department_name">Department Name</string>
    <string name="department_capacity">Department Capacity</string>
    <string name="department_min_total">Department Min Total</string>
    <string name="min_special">Min Special</string>
    <string name="choose_language">choose language</string>
    <string name="department_description">Department Description</string>
    <string name="add_department">Add Department</string>
</resources>
