<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg">

    <LinearLayout
        android:id="@+id/input_group"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="New Department"
            android:textColor="#F7EBD9D9"
            android:textSize="30sp"
            android:layout_marginBottom="40dp"
            android:fontFamily="@font/berkshire_swash"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/getDepartmentName"
            android:layout_width="255dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/add_new_edit_text"
            android:hint="@string/department_name"
            android:inputType="text"
            android:padding="9dp"
            android:textColor="#ffffff"
             />

        <EditText
            android:id="@+id/getDepartmentCapacity"
            android:layout_width="255dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/add_new_edit_text"
            android:hint="@string/department_capacity"
            android:inputType="number"
            android:padding="9dp"
            android:textColor="#ffffff"
             />


        <EditText
            android:id="@+id/getDepartmentMinTotal"
            android:layout_width="255dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/add_new_edit_text"
            android:hint="@string/department_min_total"
            android:inputType="number"
            android:padding="9dp"
            android:textColor="#ffffff"
             />


        <LinearLayout
            android:layout_width="255dp"
            android:layout_height="60dp"
            android:layout_marginTop="8dp"
            android:padding="0dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/getDepartmentMinSpecial"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="0.1"
                android:background="@drawable/add_new_edit_text"
                android:hint="@string/min_special"
                android:inputType="number"
                android:padding="8dp"
                android:textColor="#ffffff"
                android:textSize="14sp"
                android:textStyle="bold" />

            <!--            if you want change anything here check this library
            https://github.com/jaredrummler/MaterialSpinner-->

            <com.jaredrummler.materialspinner.MaterialSpinner
                android:id="@+id/spinner_choose_subject"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="0.8"
                android:hint="@string/choose_language"
                android:textColor="#000"
                android:textStyle="bold"
                app:ms_background_color="#F7EBD9D9" />
        </LinearLayout>


        <EditText
            android:id="@+id/getDepartmentDescription"
            android:layout_width="255dp"
            android:layout_height="100dp"
            android:layout_margin="15dp"
            android:background="@drawable/add_new_edit_text"
            android:gravity="start"
            android:hint="@string/department_description"
            android:textColor="#ffffff"

            android:inputType="textMultiLine"
            android:padding="15dp"
             />


        <Button
            android:id="@+id/buttonAddDepartment"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@drawable/button"
            android:foreground="?android:attr/selectableItemBackground"
            android:text="@string/add_department"
            android:textAllCaps="true"
            android:textColor="#FFFFFF"
            android:textSize="17sp" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>